--- a/sitio/views/login.ejs
+++ b/sitio/views/login.ejs
@@ -15,7 +15,7 @@
                     <form class="form" action="" method="POST" id="form-login">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control <%- locals.errores && locals.errores.email ? 'is-invalid' : null %>" id="email"
+                            <input type="email" class="form-control <%- locals.errores && locals.errores.email ? 'is-invalid' : null %>" id="mail"
                                 aria-describedby="emailHelp" name="email">
                             <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie
                             </div>
