--- a/sitio/views/list.ejs
+++ b/sitio/views/list.ejs
@@ -14,7 +14,13 @@
                       <div class="imagen">
                         <a href="/admin/editProducts/<%= producto.id %> "><img class="rounded-circle" src="/images/<%= producto.image %> "
                             width="200px"> </a>
+                            <div class="botones">
+                              <button class="btn btn-primary ms-2"><a href="/admin/editProducts/<%= producto.id %> ">Editar</a></button>
+                    <form action="/admin/delete/<%= producto.id %>?_method=DELETE " method="POST">
+                    <button type="submit" class="btn btn-danger ms-2">Eliminar</button>
+                    </form>
                       </div>
+                    </div>
                       <div class="resumen">
                         <h4 class="descripcion">
                           <%= producto.title %>
