--- a/sitio/views/login.ejs
+++ b/sitio/views/login.ejs
@@ -13,17 +13,20 @@
                 <!-- form bootstrap-->
                 <section class="box-2">
                     <form class="form" action="" method="POST" id="form-login">
+                       <span id="errorEmpty" class="text-danger"></span>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
                             <input type="email" class="form-control <%- locals.errores && locals.errores.email ? 'is-invalid' : null %>" id="mail"
-                                aria-describedby="emailHelp" name="email">
+                                aria-describedby="emailHelp" name="email"
+                                value="<%= locals.oldData ? oldData.email : null %>">
                             <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie
                             </div>
                             <span class="text-danger" id="error-email"></span>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="password" name="password">
+                            <input type="password" class="form-control" id="password" name="password"
+                            value="<%= locals.oldData ? oldData.password : null %>">
                             <span class="text-danger" id="error-password"></span>
                         </div>
                         <div class="mb-3 form-check">
