--- a/sitio/views/addProducts.ejs
+++ b/sitio/views/addProducts.ejs
@@ -5,25 +5,26 @@
     <body class="addProducts">
         <%- include('./partials/header.ejs') %>
     
-                    <form action="/admin/addProducts" method="POST" enctype="multipart/form-data">
+                    <form action="/admin/addProducts" method="POST" enctype="multipart/form-data" id="form-addProduct">
                         <div class="formulario">
                             <div class="boxForm">
                                 <label for="titulo" class="">Título :</label>
-                                <input class="input-title" type="text" name="title" id="titulo" 
+                                <input class="input-title" type="text" name="title" id="title" 
                                 value="<%= locals.oldData ? oldData.title : null %>">
                                 <div class="small text-danger">
                                     <%= locals.errores && errores.title ? errores.title.msg : null %>
                                 </div>
-
+                                <span class="text-danger" id="error-title"></span>
                             </div>
 
                             <div class="boxForm">
                                 <label for="descripcion" class="">Descripción:</label>
-                                <input class="input-form" type="text" name="description" id="descripcion" 
+                                <input class="input-form" type="text" name="description" id="description" 
                                 value="<%= locals.oldData ? oldData.description : null %>"> 
                                 <div class="small text-danger">
                                     <%= locals.errores && errores.description ? errores.description.msg : null %>
                                 </div>
+                                <span class="text-danger" id="error-description"></span>
                             </div>
 
                             <div class="boxForm">
@@ -61,6 +62,7 @@
                     </form>
                     <%- include('./partials/footer.ejs') %>
                     <%- include('./partials/scripts.ejs') %>
+                    <script src="/js/addProductValidator.js"></script>
     </body>
 
 
