funcionalidad en index

--- a/sitio/views/partials/footer.ejs
+++ b/sitio/views/partials/footer.ejs
@@ -49,16 +49,16 @@
                         Categorías
                     </h6>
                     <p>
-                        <a href="/products/search?search=mate" class="text-reset">Mates</a>
+                        <a href="/products/Category/1" class="text-reset">Mates</a>
                     </p>
                     <p>
-                        <a href="/products/search?search=bolso" class="text-reset">Bolsos</a>
+                        <a href="/products/Category/3" class="text-reset">Bolsos</a>
+                    </p>
+                    <p>
+                        <a href="/products/Category/4" class="text-reset">Bombillas</a>
                     </p>
                     <p>
                         <a href="#!" class="text-reset"></a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Otros</a>
                     </p>
                 </div>
 
