--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -49,7 +49,7 @@
 
             <article class="producto">
               <div class="imagen">
-                <a href="/products/detalleDeProducto/<%= producto.id %> "><img class="rounded-circle"
+                <a href="/products/Category/<%= producto.categories_id %> "><img class="rounded-circle"
                     src="/images/<%= producto.image %> " width="200px"> </a>
               </div>
               <div class="resumen">
