add sweetalert delete

--- a/sitio/views/addProducts.ejs
+++ b/sitio/views/addProducts.ejs
@@ -29,7 +29,8 @@
 
                             <div class="boxForm">
                                 <label for="category">Categorías:</label>
-                                <select name="category" id="category" value="Categorias"  >
+                                <select name="category" id="category" value=""  >
+                                    
                                     <option value=0>Seleccione una categoría</option>
                                     <option value=1>Mates</option>
                                     <option value=2>Yerbas</option>
@@ -37,24 +38,28 @@
                                     <option value=4>Bombillas</option>
                                     <option value=5>Otros</option>
                                 </select>
-                            </div>
+                            </div> 
+                            <span class="text-danger" id="error-a"></span>
 
 
                             <div class="boxForm">
                                 <label for="valor" class="">Precio : </label>
-                                <input class="input-price" type="text" name="price" 
+                                <input class="input-price" type="text" name="price"  id="price"
                                 value="<%= locals.oldData ? oldData.price : null %>"> 
                                 <div class="small text-danger">
                                     <%= locals.errores && errores.price ? errores.price.msg : null %>
                                 </div>
+                                <span class="text-danger" id="error-price"></span>
 
                             </div>
 
                             <div class="boxForm">
                                 <label class="">Cargar foto :</label>
-                                <input class="input-form" type="file" name="image" accept="image/*"   
+                                <input class="input-form" type="file" name="image" accept="image/*" id="image"
                                  value="<%= locals.oldData ? oldData.name : null %>"> 
                             </div>
+                            <span class="text-danger" id="error-image"></span>
+
                             <div class="boxForm">
                                 <button type="submit" class="btn btn-dark">Guardar</button>
                             </div>
