--- a/sitio/views/contacto.ejs
+++ b/sitio/views/contacto.ejs
@@ -5,33 +5,35 @@
 
     <body class="contacto">
         <%- include('./partials/header.ejs') %>
-        <form action="" class="form-contact">
+        <form action="https://formsubmit.co/fgcespedes1995@gmail.com" class="form-contact" id="form-contact" method="POST">
             <h1>Contacta con nosotros</h1>
         <div class="mb-3">
             <label for="" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="exampleForName" placeholder="Nombre">
+            <input type="text" class="form-control" id="exampleForName" placeholder="Nombre" name="Nombre" required>
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email@ejemplo.com">
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email@ejemplo.com"  name="Email" required>
           </div>
           <div class="mb-3">
             <label for="" class="form-label">Telefono</label>
-            <input type="text" class="form-control" id="exampleForName" placeholder="11-12122321">
+            <input type="text" class="form-control" id="exampleForName" placeholder="11-12122321" name="Celular/Telefono"required>
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Asunto </label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="asunto" required></textarea>
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Mensaje </label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  name="Mensaje" required></textarea>
           </div>
           <button type="submit" class="button">ENVIAR</button>
+       
         </form>
          
             <%- include('./partials/footer.ejs') %>
                 <%- include('./partials/scripts.ejs') %>
+                <script src="/js/contactValidator.js"></script>
     </body>
 
 </html>
