--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -39,14 +39,15 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <h2 class="animate__animated animate__backInLeft animate__delay-2s"> elegí, pagá y recibí tu pedido sin moverte de tu casa.</h2>
+        <h2 class="texto-degradado animate__animated animate__backInLeft animate__delay-3s"> PRODUCTOS DESTACADOS</h2>
 
 
         <!--  Productos   -->
 
         <section class="productos">
-          <% products.forEach(producto=> { %>
 
+          <% products.forEach(producto=> { %>
+            
             <article class="producto">
               <div class="imagen">
                 <a href="/products/Category/<%= producto.categories_id %> "><img class="rounded-circle"
