--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -164,4 +164,16 @@ display: block;
 .home h2{
     display: block;
 }
+
+.home .texto-degradado{
+    background-image: linear-gradient( 
+        7deg ,#4e3f0d,rgb(191 191 189),#ffbf00);
+    -moz-background-clip: text;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -moz-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent;
+    -text-fill-color: transparent;
+    font-size: 30px;
+}
 }
