--- a/sitio/views/productos.ejs
+++ b/sitio/views/productos.ejs
@@ -48,7 +48,7 @@
                 </button>
               </div>
 
-              <h1 class="texto-degradado animate__animated animate__pulse animate__delay-3s">Nuestros Productos</h1>
+              <h1 class="texto-degradado animate__animated animate__flip">Nuestros Productos</h1>
               <section class="productos">
                 <% productos.forEach(producto=> { %>
       
